--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -15,7 +15,7 @@
 				"luasnip-",
 				"conform-"
 			],
-			"schedule": ["before 5am on Monday"]
+			"schedule": ["at 10am on Saturday"]
 		},
 		{
 			"matchPaths": [
